@@ -15,6 +15,9 @@ Added support for Channel open notification listeners
 
 All AMQP timestamps are in UTC
 
+Most exceptions will now propagate to user code, fixing problems with 
+gevent.GreenletExit and SystemExit
+
 
 
 0.4.5
